Add stanza route
